@@ -13,6 +13,8 @@ Version 6.6.1 - not yet released
   - allow using more than one TCP/UDP device
   - fix spurious errors after IOIO baud rate change (#2733, #2754)
   - K6Bt: fix configured baud rate setup on Android (#2836)
+* tasks
+  - prevent moving target out of the cylinder (#2794)
 * configuration
   - fix regression with polar configuration (#2803)
 * support gcc 4.8
